<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new_all_screen"
    tools:context=".FireActivity">

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/text_phone"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="350dp"
        android:layout_height="110dp"
        android:background="@drawable/edit_text_rectangle"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:fontFamily="@font/abril_fatface"
        android:textAlignment="center"
        android:hint="@string/hint_enter_name"
        android:textColorHint="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

    <Button
        android:id="@+id/buttonLoginStart"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/btn_purple"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/btn_text_start"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:textColor="@color/btn_border_green"
        app:cornerRadius="30dp"
        app:strokeWidth="6dp"
        app:strokeColor="@color/btn_border_green"
        app:layout_constraintBottom_toTopOf="@+id/textViewMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <TextView
        android:id="@+id/textViewMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/text_anonymous_mode"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginStart" />

</androidx.constraintlayout.widget.ConstraintLayout>