<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new_all_screen"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/buttonGames"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/btn_purple"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/btn_text_games"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:textColor="@color/btn_border_green"
        app:cornerRadius="30dp"
        app:strokeWidth="6dp"
        app:strokeColor="@color/btn_border_green"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btn_purple"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/btn_text_settings"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:textColor="@color/btn_border_green"
        app:cornerRadius="30dp"
        app:strokeWidth="6dp"
        app:strokeColor="@color/btn_border_green"
        app:layout_constraintBottom_toTopOf="@+id/buttonPrivacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGames" />

    <Button
        android:id="@+id/buttonPrivacy"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btn_purple"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/btn_text_privacy"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:textColor="@color/btn_border_green"
        app:cornerRadius="30dp"
        app:strokeWidth="6dp"
        app:strokeColor="@color/btn_border_green"
        app:layout_constraintBottom_toTopOf="@+id/buttonExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/btn_purple"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/btn_text_exit"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:textColor="@color/btn_border_green"
        app:cornerRadius="30dp"
        app:strokeWidth="6dp"
        app:strokeColor="@color/btn_border_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPrivacy" />

</androidx.constraintlayout.widget.ConstraintLayout>